ops/istio/gateway-istio.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        protocol: HTTP
      hosts:
        - "app-a.example.com"
        - "app-b.example.com"
