ops/istio/timeout-retry-route-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-route
  namespace: my-namespace
spec:
  parentRefs:
    - name: my-gateway
  hostnames:
    - "myapp.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1
      backendRefs:
        - name: myapp-v1
          port: 80
      timeouts:
        request: 10s
        backendRequest: 2s
      retry:
        attempts: 3
        backoff: 500ms
        # optionally use `codes: [500,502,503]` with some controllers
        # retryOn: gateway-error,connect-failure,refused-stream
